# music-lib-explorer

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  run.py
app/: __init__.py  logger.py
app/addons/spotify/controller/: spotify_controller.py
app/addons/spotify/models/: __init__.py  spotify_album.py  spotify_artist.py
app/config/: config.py
app/data/: __all_models.py  session_factory.py
app/data/dataset/: csv_dataset.py  dataset.py  json_dataset.py  xml_dataset.py
app/data/models/: album.py  music_list.py  settings.py  song.py  user.py
app/extras/spotify_api_keys/: spotify_client_id.key
app/extras/sql_extra/: console_01.sql
app/music_library/views/: __init__.py  music_lib_albums.py  music_lib_songs.py  music_lib_spotify_info.py  music_list_songs.py  settings.py
app/services/: album_service.py  data_service.py  music_list_service.py  song_service.py  user_service.py
app/static/css/: about.css  form.css  index.css  music_lib.css  site.css
app/templates/: about.html  base.html  index.html  music_lib_albums.html  music_lib_songs.html  music_lib_spotify_info.html  music_list_songs.html  settings.html
app/templates/errors/: 404.html
app/tools/logger/: logger.py
app/tools/utils/: import_data.py  setup_db.py  utils.py
app/utils/: import_data.py
app/views/: __init__.py  views.py  views_errors.py
