[project]
name = "music-lib-explorer"
version = "1.0.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8,<9",
    "flask>=3.1.0,<4",
    "itsdangerous>=2.2.0,<3",
    "jinja2>=3.1.5,<4",
    "lxml>=5.3.0,<6",
    "markupsafe>=2.1.5,<3",
    "python-dotenv>=1.0.1,<2",
    "requests>=2.32.3,<3",
    "spotipy>=2.25.0,<3",
    "sqlalchemy>=2.0.37,<3",
    "werkzeug>=3.1.3,<4",
    "xlsxwriter>=3.2.0,<4",
]
