[project]
name = "music-lib-explorer"
version = "1.1.0"
description = "Music Library Metadata Explorer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.0,<9",
    "flask>=3.1.2,<4",
    "itsdangerous>=2.2.0,<3",
    "jinja2>=3.1.6,<4",
    "lxml>=5.4.0,<6",
    "markupsafe>=2.1.5,<3",
    "python-dotenv>=1.1.1,<2",
    "requests>=2.32.5,<3",
    "spotipy>=2.25.1,<3",
    "sqlalchemy>=2.0.44,<3",
    "werkzeug>=3.1.3,<4",
    "xlsxwriter>=3.2.9,<4",
]
